@@ -9,5 +9,4 @@
 /dj_make_chroot
 /dj_make_chroot_docker
 /dj_run_chroot
-/eventdaemon
 /icpctools
