@@ -1,41 +1,0 @@
-#!/usr/bin/env php
-<?php declare(strict_types=1);
-/**
- * @configure_input@
- *
- * Generate events for a contest that cannot be generated in other
- * code. This includes:
- * - Initial "create events" at MAX(contest:activatetime,daemon start)
- *   for static data: contest, teams, problems, ...
- * - Contest state change events: start, freeze, end, finalize, ...
- *
- * Part of the DOMjudge Programming Contest Jury System and licensed
- * under the GNU GPL. See README and COPYING for details.
- */
-use Symfony\Bundle\FrameworkBundle\Console\Application;
-use Symfony\Component\Console\Input\ArgvInput;
-use Symfony\Component\Debug\Debug;
-
-if (isset($_SERVER['REMOTE_ADDR'])) {
-    die("Commandline use only");
-}
-
-require('@domserver_etcdir@/domserver-static.php');
-
-set_time_limit(0);
-
-/** @var Composer\Autoload\ClassLoader $loader */
-$loader = require WEBAPPDIR.'/app/autoload.php';
-
-$input = new ArgvInput();
-$env = $input->getParameterOption(['--env', '-e'], getenv('SYMFONY_ENV') ?: 'prod');
-$debug = getenv('SYMFONY_DEBUG') !== '0' && !$input->hasParameterOption(['--no-debug', '']) && $env !== 'prod';
-
-if ($debug) {
-    Debug::enable();
-}
-
-$kernel = new AppKernel($env, $debug);
-$application = new Application($kernel);
-$application->setDefaultCommand('eventdaemon', true);
-$application->run($input);
